# renderer

./: .gitignore  CMakeLists.txt
include/: geometry.h  minifb.h  obj_manager.h  renderer.h  transform.h
include/graphics/: camera.h  mesh.h  renderer.h
include/utils/: color_utils.h  math_utils.h
src/: main.c  minifb.c
src/graphics/: camera.c  mesh.c  obj_manager.c  renderer.c
src/utils/: color_utils.c  math_utils.c
